--- a/garant/index.html
+++ b/garant/index.html
@@ -30,7 +30,7 @@
 					<div class="service__name">Регулировка окон</div>
 					<div class="service__extra extra-service">
 						<div class="extra-service__title">Наценка в %:</div>
-						<div class="extra-service__percent">10</div>
+						<input type="text" class="extra-service__percent" value="10">
 					</div>
 					<div class="service__footer">
 						<div class="service__total">Сумма: 10 000₽</div>
@@ -43,7 +43,7 @@
 						<div class="service__change link">изменить</div>
 					</div>
 					<div class="service__name">Наименование</div>
-					<table class="service__table">
+					<!-- <table class="service__table">
 						<tr>
 							<td>Единица измерения:</td>
 							<td>Метры</td>
@@ -56,10 +56,24 @@
 							<td>Стоимость, руб.:</td>
 							<td>22 000</td>
 						</tr>
-					</table>
+					</table> -->
+					<div class="service__table table">
+						<div class="table__row">
+							<div class="table__item">Единица измерения:</div>
+							<div class="table__item">Метры</div>
+						</div>
+						<div class="table__row">
+							<div class="table__item">Количество:</div>
+							<div class="table__item">11</div>
+						</div>
+						<div class="table__row">
+							<div class="table__item">Стоимость, руб.:</div>
+							<div class="table__item">22 000</div>
+						</div>
+					</div>
 					<div class="service__extra extra-service">
 						<div class="extra-service__title">Наценка в %:</div>
-						<div class="extra-service__percent">10</div>
+						<input type="text" class="extra-service__percent" value="10">
 					</div>
 					<div class="service__footer">
 						<div class="service__total">Сумма: 10 000₽</div>
@@ -68,7 +82,7 @@
 				</div>
 				<div class="card__discount extra-service">
 					<div class="extra-service__title">Скидка клиента, в %:</div>
-					<div class="extra-service__percent">10</div>
+					<input type="text" class="extra-service__percent" value="10"></input>
 				</div>
 				<a href="#" class="card__add link">Добавить услугу</a>
 				<div class="card__footer footer-card">
