--- a/oscar_hartmann/index.html
+++ b/oscar_hartmann/index.html
@@ -26,8 +26,8 @@
 				</div>
 				<nav class="menu__body">
 					<ul class="menu__list">
-						<li><a href="#" class="menu__link">бизнес</a></li>
-						<li><a href="#" class="menu__link">для людей</a></li>
+						<li><a href="business.html" class="menu__link">бизнес</a></li>
+						<li><a href="people.html" class="menu__link">для людей</a></li>
 						<li><a href="#" class="menu__link">не только</a></li>
 						<li><a href="#" class="menu__link">деньги</a></li>
 						<li><a href="#" class="menu__link">контакты</a></li>
@@ -49,7 +49,7 @@
 					<div class="bio__body">
 						<h2 class="bio__title title">Биография</h2>
 						<div class="bio__text text">Оскар родился в семье русских немцев в Казахстане 14 мая 1982 года. В восемь лет вместе с родителями переехал на ПМЖ в Германию. В семнадцать лет прошел обучение по обмену в Tuscarawas Valley High School в США. Целью поездки Оскара было изучение английского языка, что он с успехом сделал. Вернувшись в Германию, он с отличием окончил техническую гимназию. Вместо службы в армии Оскар выбрал альтернативную гражданскую службу. В 2004 году он прошёл её в России, в детской клинической больнице, где выучил русский язык. Затем Оскар Хартманн поступил в университет WHU в Кобленце и закончил его по специальности «международная экономика». Во время учёбы Оскар, как один из лучших студентов, проходил практику в транснациональных компаниях: BMW в Малайзии, GameGoods в Кельне, а также в Boston Consulting Group. Несколько семестров учился по обмену на MBA в University of Hawaii (США) и в Финансовой Академии (Россия).</div>
-						<div class="read-more">Читать далее</div>
+						<div class="read-more read-more_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
@@ -77,7 +77,7 @@
 							<p>Оскар Хартманн признан одним из самых успешных бизнес-ангелов мира. На международном конкурсе Ernst&Young «Предприниматель года 2015» в России Оскар получил номинацию «Мастер Инвестиций». Оскар – амбассадор и активный участник нескольких ежегодных конкурсов для предпринимателей: «Прорыв Года», EY-Entrepreneur of the year.</p>
 							<p>В 2018 году он вошёл в тор-100 богатейших жителей Германии. Сегодня Оскар входит в состав совета директоров Альфа-Банка. Инвестиции для Оскара Хартманна – способ познавать мир. Своей целью он выбрал вложение в идеи, которые меняют мир и людей к лучшему, создают новые ценности.</p>
 						</div>
-						<div class="read-more">Читать далее</div>
+						<div class="read-more read-more_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
@@ -90,7 +90,7 @@
 							<p>Оскар увлекающийся и увлечённый человек. С 2017 года Оскар Хартманн ведет youtube-канал, суммарный охват которого превышает тридцать миллионов зрителей. Хартманн выкладывает профессионально снятые увлекательные ролики вместе со множеством практических советов и полезной информации для будущих и действующих бизнесменов. При этом в своих видео Оскар фокусируется на важнейшем философском вопросе: «Что делает жизнь человека наполненной и счастливой?»Оскар - автор книги-бестселлера. Книга получила название "Просто делай! Делай просто!". Это подробный путеводитель для предпринимателей и всех, кто хочет научиться управлять своей жизнью и успешно достигать целей. Автор не пытается хвастаться своими достижениями и не даёт универсального рецепта богатства. Оскар помогает читателю выстроить правильное мышление, которое позволит эффективно двигаться к поставленной цели.</p>
 							<p> Оскар увлекается спортом. Он всерьёз занимается индор-греблей, плаванием, бегом, множество раз совершал прыжки с парашютом. В 2019 году в Санкт-Петербурге состоялся один из крупнейших бизнес-форумов "Синергия". Прямо на форуме предприниматель побил мировой рекорд в спринт-гребле на 100 метров, который ранее принадлежал Бенджамину Смиту. В 2021 году Оскар начал профессионально заниматься велоспринтом. Его ментором стал чемпион мира по велоспринту, заслуженный мастер спорта Денис Дмитриев. В 2022 году Оскар будет бороться за звание кандидата в мастера спорта по велоспринту.</p>
 						</div>
-						<div class="read-more read-more_b">Читать далее</div>
+						<div class="read-more read-more_b_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
@@ -122,7 +122,7 @@
 							<p>«Эквиум» - бизнес сообщество, объединяющее high-impact предпринимателей. Людей, которые не только смогут построить многомиллиардную компанию, но и будут поддерживать социально преобразующую деятельность, которая меняет жизнь общества к лучшему. Сообщество нацелено на качественное изменение макроэкономических процессов и улучшение благосостояния человека через развитие предпринимательства и популяризацию позитивных ролевых моделей.</p>
 							<p>Оскару Хартманну принадлежит должность Председателя попечительского совета «Рыбаков-фонд» – некоммерческой организации, ставящей своей целью поддержку российского предпринимательства, а также социальных некоммерческих проектов и образования.</p>
 						</div>
-						<div class="read-more read-more_b">Читать далее</div>
+						<div class="read-more read-more_b_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
@@ -135,6 +135,7 @@
 						<a href="https://www.youtube.com/channel/UCFJnZHIusOlHr-pbYVHmr-A" target="_blank" rel="noopener noreferrer" class="media__link">YouTube</a>
 						<div class="read-more">Читать далее</div>
 					</div>
+					<a href="https://www.youtube.com/channel/UCFJnZHIusOlHr-pbYVHmr-A" target="_blank" rel="noopener noreferrer" class="media__subscribe">подписаться</a>
 				</div>
 			</section>
 			<section class="decathlon">
@@ -158,7 +159,7 @@
 							</ul>
 							<p>В своей книге «Просто делай! Делай Просто!», на you-tube, в инстаграм и телеграмм-канале Оскар призывает следовать его примеру. Он рассказывает, как развить в себе это умение и почему оно имеет такое большое значение для гармоничности и успешности любого человека, не только предпринимателя.</p>
 						</div>
-						<div class="read-more read-more_b">Читать далее</div>
+						<div class="read-more read-more_b_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
@@ -187,7 +188,7 @@
 							<p>Iqcard – самый доступный сервис микролендингов и локальных чат-ботов для бизнеса. </p>
 							<p>Hlebnoe mesto - сеть современных пекарен, которая предлагает своим покупателям свежий хлеб и выпечку из натуральных ингредиентов, приготовленную исключительно по традиционным рецептурам.</p>
 						</div>
-						<div class="read-more">Читать далее</div>
+						<div class="read-more read-more_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
@@ -204,7 +205,7 @@
 							<p>Оскар и Татьяна вместе с детьми много путешествуют, они совершили более ста поездок по всему миру. </p>
 							<p>Оскар убеждён, если родители хотят дать детям безусловную любовь, то им стоит стараться быть положительным примером во всём: в отношениях со второй половиной, в доброжелательной атмосфере дома, в качественном времяпрепровождении с детьми. Оскар и Татьяна поддерживают идеи и особенности своих детей, при этом не пытаясь сделать из них лучшие копии себя.</p>
 						</div>
-						<div class="read-more read-more_b">Читать далее</div>
+						<div class="read-more read-more_b_bs">Читать далее</div>
 					</div>
 				</div>
 			</section>
