--- a/oscar_hartmann/index.html
+++ b/oscar_hartmann/index.html
@@ -28,9 +28,9 @@
 					<ul class="menu__list">
 						<li><a href="business.html" class="menu__link">бизнес</a></li>
 						<li><a href="people.html" class="menu__link">для людей</a></li>
-						<li><a href="#" class="menu__link">не только</a></li>
-						<li><a href="#" class="menu__link">деньги</a></li>
-						<li><a href="#" class="menu__link">контакты</a></li>
+						<li><a href="notonly.html" class="menu__link">не только</a></li>
+						<li><a href="money.html" class="menu__link">деньги</a></li>
+						<li><a href="#contacts" class="menu__link">контакты</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -210,14 +210,14 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer white">
+		<footer id="contacts" class="footer white">
 	<div class='container footer__container'>
 		<h1 class="footer__title">Оскар хартманн</h1>
 		<div class="footer__socials">
-			<a href="#" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_tg"></a>
-			<a href="#" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_inst"></a>
-			<a href="#" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_vk"></a>
-			<a href="#" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_fb"></a>
+			<a href="https://t-me.ru/channel/oskar_hartmann" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_tg"></a>
+			<a href="https://www.instagram.com/oskar_hartmann/" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_inst"></a>
+			<a href="https://vk.com/oskarhartmann" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_vk"></a>
+			<a href="https://www.facebook.com/oskar.hartmann" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_fb"></a>
 			<a href="https://www.youtube.com/channel/UCFJnZHIusOlHr-pbYVHmr-A" target="_blank" rel="noopener noreferrer" class="footer__social footer__social_yt"></a>
 		</div>
 	</div>
