--- a/oscar_hartmann/business.html
+++ b/oscar_hartmann/business.html
@@ -84,6 +84,7 @@
 	</div>
 </footer>
 	</div>
+	<script src="js/vendors.min.js" defer></script>
 	<script src="js/script.min.js" defer></script>
 </body>
 </html>
