--- a/oscar_hartmann/money.html
+++ b/oscar_hartmann/money.html
@@ -79,6 +79,7 @@
 	</div>
 </footer>
 	</div>
+	<script src="js/vendors.min.js" defer></script>
 	<script src="js/script.min.js" defer></script>
 </body>
 </html>
