--- a/oscar_hartmann/people.html
+++ b/oscar_hartmann/people.html
@@ -89,6 +89,7 @@
 </footer>
 		</div>
 	</div>
+	<script src="js/vendors.min.js" defer></script>
 	<script src="js/script.min.js" defer></script>
 </body>
 </html>
