--- a/oscar_hartmann/index.html
+++ b/oscar_hartmann/index.html
@@ -41,7 +41,7 @@
 			<section class="intro">
 				<div class='container intro__container'>
 					<h1 class="intro__title">Оскар Хартманн</h1>
-					<div class="intro__text">Личное состояние Оскара превышает 300 млн. $</div>
+					<div class="intro__text">Просто делай! Делай просто!</div>
 				</div>
 			</section>
 			<section class="bio white">
