--- a/oscar_hartmann/people.html
+++ b/oscar_hartmann/people.html
@@ -11,32 +11,32 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-	<div class='container header__container'>
-		<div class="header__wrapper">
-			<ul class="header__langs">
-				<li><a href="#" id='en' class="header__lang">EN</a></li>
-				<li><a href="#" id='de' class="header__lang">DE</a></li>
-				<li><a href="#" id='ru' class="header__lang active">РУС</a></li>
-			</ul>
-			<div class="header__menu menu">
-				<div class="hamburger">
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-				<nav class="menu__body">
-					<ul class="menu__list">
-						<li><a href="business.html" class="menu__link">бизнес</a></li>
-						<li><a href="people.html" class="menu__link">для людей</a></li>
-						<li><a href="notonly.html" class="menu__link">не только</a></li>
-						<li><a href="money.html" class="menu__link">деньги</a></li>
-						<li><a href="#contacts" class="menu__link">контакты</a></li>
+			<div class='container header__container'>
+				<div class="header__wrapper">
+					<ul class="header__langs">
+						<li><a href="#" id='en' class="header__lang">EN</a></li>
+						<li><a href="#" id='de' class="header__lang">DE</a></li>
+						<li><a href="#" id='ru' class="header__lang active">РУС</a></li>
 					</ul>
-				</nav>
+					<a href="" class="menu__link contacts">Контакты</a>
+					<div class="header__menu menu">
+						<div class="hamburger">
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+						<nav class="menu__body">
+							<ul class="menu__list">
+								<li><a href="business.html" class="menu__link">бизнес</a></li>
+								<li><a href="people.html" class="menu__link">для людей</a></li>
+								<li><a href="notonly.html" class="menu__link">не только</a></li>
+								<li><a href="money.html" class="menu__link">деньги</a></li>
+							</ul>
+						</nav>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
-</header>
+		</header>
 		<main class="page">
 			<section class="intro intro__people">
 				<div class='container intro__container'>
