--- a/oscar_hartmann/people.html
+++ b/oscar_hartmann/people.html
@@ -18,7 +18,7 @@
 						<li><a href="#" id='de' class="header__lang">DE</a></li>
 						<li><a href="#" id='ru' class="header__lang active">РУС</a></li>
 					</ul>
-					<a href="" class="menu__link contacts">Контакты</a>
+					<a href="contacts.html" class="menu__link contacts">Контакты</a>
 					<div class="header__menu menu">
 						<div class="hamburger">
 							<span></span>
@@ -89,7 +89,6 @@
 </footer>
 		</div>
 	</div>
-	<script src="js/vendors.min.js" defer></script>
 	<script src="js/script.min.js" defer></script>
 </body>
 </html>
