--- a/oscar_hartmann/contacts.html
+++ b/oscar_hartmann/contacts.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Описание">
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Для людей</title>
+	<title>Контакты</title>
 </head>
 <body>
 	<div class="wrapper">
