--- a/CV/index.html
+++ b/CV/index.html
@@ -48,15 +48,21 @@
 					<div class="tech-card__skills">
 						<div class="tech-card__skill skill-tech">
 							<div class="skill-tech__title">Internet</div>
-							<div class="skill-tech__progress internet-progress"></div>
+							<div class="skill-tech__progress internet-progress">
+								<div class="internet-progress__line" style="width: 50%;"></div>
+							</div>
 						</div>
 						<div class="tech-card__skill skill-tech">
 							<div class="skill-tech__title">Social Media</div>
-							<div class="skill-tech__progress social-progress"></div>
+							<div class="skill-tech__progress social-progress">
+								<div class="social-progress__line" style="width: 20%;"></div>
+							</div>
 						</div>
 						<div class="tech-card__skill skill-tech">
 							<div class="skill-tech__title">Online Shopping</div>
-							<div class="skill-tech__progress shopping-progress"></div>
+							<div class="skill-tech__progress shopping-progress">
+								<div class="shopping-progress__line" style="width: 50%;"></div>
+							</div>
 						</div>
 					</div>
 				</div>
