--- a/CV-francais/index.html
+++ b/CV-francais/index.html
@@ -39,7 +39,7 @@
 						<div class="info-card__icon">
 							<img src="img/icons/home.svg" alt="house">
 						</div>
-						<div class="info-card__first">Family</div> <!-- Я не знаю, как назвать эти строки (( -->
+						<div class="info-card__first">Famille</div> <!-- Я не знаю, как назвать эти строки (( -->
 						<div class="info-card__second">2 petit frère, 3 petite sœurs</div>
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 			<div class="card__col card-img">
 				<div class="card__avatar avatar-card">
 					<img src="img/avatar.jpeg" alt="avatar" class='avatar-card__img' data-da="card__name,1,768">
-					<div class="avatar-card__text" data-da="card-info,1,768">"Ce jeune homme est le truc de ouf"</div>
+					<div class="avatar-card__text" data-da="card-info,1,768">"Ce jeune homme - il est zarbi, ce mec!"</div>
 				</div>
 			</div>
 		</div>
