--- a/Wigs/index.html
+++ b/Wigs/index.html
@@ -23,50 +23,34 @@
 						<div class="sidebar__title">Explore</div>
 						<div class="sidebar__menu">
 							<nav class="sidebar__nav menu-sidebar">
-								<ul class="menu-sidebar__list">
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#9889;
-											New In
-										</a>
-									</li>
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#129509;
-											Clothing
-										</a>
-									</li>
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#128094;
-											Shoes
-										</a>
-									</li>
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#128092;
-											Accessories
-										</a>
-									</li>
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#129336;
-											Activewear
-										</a>
-									</li>
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#127873;
-											Gifts & Living
-										</a>
-									</li>
-									<li>
-										<a href="#" class="menu-sidebar__link _icon">
-											&#128142;
-											Inspiration
-										</a>
-									</li>
-								</ul>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#9889;
+									New In
+								</a>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#129509;
+									Clothing
+								</a>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#128094;
+									Shoes
+								</a>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#128092;
+									Accessories
+								</a>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#129336;
+									Activewear
+								</a>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#127873;
+									Gifts & Living
+								</a>
+								<a href="#" class="menu-sidebar__link _icon">
+									&#128142;
+									Inspiration
+								</a>
 							</nav>
 						</div>
 					</div>
@@ -97,12 +81,10 @@
 						</div>
 						<div class="header__menu menu">
 							<nav class="menu__body">
-								<ul class="menu__list">
-									<li><a class="menu__link" href="#">products</a></li>
-									<li><a class="menu__link" href="#">story</a></li>
-									<li><a class="menu__link" href="#">manufacturing</a></li>
-									<li><a class="menu__link" href="#">packaging</a></li>
-								</ul>
+								<a class="menu__link" href="#">products</a>
+								<a class="menu__link" href="#">story</a>
+								<a class="menu__link" href="#">manufacturing</a>
+								<a class="menu__link" href="#">packaging</a>
 							</nav>
 							<div class="menu__buttons">
 								<button class="_modal-open menu__btn" data-open="basket"><img src="img/icons/basket.svg" alt=""></button>
@@ -203,7 +185,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/libs.js" defer></script>
 	<script src="js/script.min.js" defer></script>
 </body>
 </html>
