--- a/zainoo/index.html
+++ b/zainoo/index.html
@@ -124,7 +124,7 @@
 							<div class="slide-main-slider__number">96</div>
 						</div>
 					</div>
-					<div class="swiper-pagination"></div>
+					<div class="swiper-pagination" data-da="main-slider__swiper,first,576"></div>
 				</div>
 			</div>
 			<div class="right-menu">
