--- a/polyphonie_landing/index.html
+++ b/polyphonie_landing/index.html
@@ -354,7 +354,7 @@
 									Permet de supprimer tout le travail de routine comme l'optimisation des ressources
 									et la compression de code</span>
 								<span class="_lang rus">Профессиональный менеджер задач для разработчиков. Позволяет
-									убрать всю рутинную работу, как оптимизация ресурсов, и сжатие кода</span>
+									убрать всю рутинную работу, как оптимизация ресурсов и сжатие кода</span>
 								<span class="_lang eng">Professional task manager for developers. Allows you to remove
 									all routine work, such as resource optimization and code compression</span>
 							</div>
